[tool.poetry]
name = "cranial-datastore"
version = "0.3.2"
description = "Data storage connectivity & utilities for Cranial."
authors = ["Matt Chapman et al. <Matt@NinjitsuWeb.com>"]
license = "GPL-3.0+"
repository = "https://github.com/tribune/cranial-datastore"
packages = [
    { include = "cranial" }
]

[tool.poetry.dependencies]
boto3 = "^1.9"
cachetools = "^2.1"
cranial-common = "^0.2.0"
python = ">=3.5"
pyscopg2-binary = ">=2.8.2"

[tool.poetry.dev-dependencies]
